fix: a couple of UI fixes
* Fixes that tooltips were being cropped in the report list and removes a workaround.
* Only shows tooltips on the stacked chart if there is no legend.

--- a/report-app/src/app/app.scss
+++ b/report-app/src/app/app.scss
@@ -41,7 +41,6 @@
 
 .report-content {
   flex-grow: 1;
-  overflow-y: auto;
   min-width: 700px;
   min-height: 100vh;
 }
