--- a/report-app/src/app/pages/report-viewer/report-viewer.scss
+++ b/report-app/src/app/pages/report-viewer/report-viewer.scss
@@ -187,7 +187,7 @@ expansion-panel {
   border-radius: var(--border-radius);
   padding: 10px;
   max-height: 300px;
-  overflow-y: auto;
+  overflow: auto;
 }
 
 .no-failed-checks {
